Converted Age Int to DateTime object, and the program now calculated age based on the current year and birth year. Also formatted the file structure to a more professional format. Added file-loader to webpack to allow for loading of images.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -19,6 +19,7 @@ scroll-container {
     height: 800px;
     overflow-y: scroll;
     scroll-behavior: smooth;
+    background-color: white;
 }
 scroll-page {
     display: flex;
@@ -35,3 +36,11 @@ scroll-page {
 .planetWrapper {
     display: grid;
 }
+
+body {
+    background-image: url("../assets/galaxy.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
