Edited Readme, removed assets folder and imported background image via link.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -42,7 +42,7 @@ scroll-page {
 }
 
 body {
-    background-image: url("../assets/galaxy.jpg");
+    background-image: url("https://e3.365dm.com/18/05/1096x616/skynews-stars-galaxy_4311979.jpg?20180516185457");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
