--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -42,9 +42,10 @@ scroll-page {
 }
 
 body {
-    background-image: url("https://e3.365dm.com/18/05/1096x616/skynews-stars-galaxy_4311979.jpg?20180516185457");
-    background-position: center;
-    background-repeat: no-repeat;
+    background: url("https://e3.365dm.com/18/05/1096x616/skynews-stars-galaxy_4311979.jpg?20180516185457") no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
     font-family: 'Oswald', sans-serif;
 }
